# cppsudoku

./: .gitignore  .gitignore.txt  AsciiReader_8hpp_source.html  BackTrackingSolver_8hpp_source.html  BlockWriter_8hpp_source.html  CMakeLists.txt  CallTime_8hpp_source.html  CommandLineParser_8hpp_source.html  CommandOption_8hpp_source.html  CommandValidators_8hpp_source.html  ConstSqrt_8hpp_source.html  ConstraintPropagationSolver_8hpp_source.html  Digit_8hpp_source.html  Doxyfile  FileStream_8hpp_source.html  ICommandOption_8hpp_source.html  IReader_8hpp_source.html  ISolver_8hpp_source.html  IWriter_8hpp_source.html  JsonReader_8hpp_source.html  JsonWriter_8hpp_source.html  LICENSE  LineWriter_8hpp_source.html  Logger_8hpp_source.html  PrettyWriter_8hpp_source.html  README.md  RangeArray_8hpp_source.html  RangeView_8hpp_source.html  SudokuBoard_8hpp_source.html  SudokuTraits_8hpp_source.html  annotated.html  board.txt  board_simple.txt  classcom_1_1rambrant_1_1sudoku_1_1AsciiReader-members.html  classcom_1_1rambrant_1_1sudoku_1_1AsciiReader.html  classcom_1_1rambrant_1_1sudoku_1_1AsciiReader__coll__graph.map  classcom_1_1rambrant_1_1sudoku_1_1AsciiReader__coll__graph.md5  classcom_1_1rambrant_1_1sudoku_1_1AsciiReader__inherit__graph.map  classcom_1_1rambrant_1_1sudoku_1_1AsciiReader__inherit__graph.md5  classcom_1_1rambrant_1_1sudoku_1_1BackTrackingSolver-members.html  (+137 more)
cli/: CMakeLists.txt  CommandOption.hpp  main.cpp
docs/: CMakeLists.txt  Doxyfile.in
docs/html/: _ascii_reader_8hpp_source.html  _back_tracking_solver_8cpp.html  _back_tracking_solver_8hpp.html  _back_tracking_solver_8hpp.js  _back_tracking_solver_8hpp_source.html  _block_writer_8hpp_source.html  _call_time_8hpp_source.html  _command_line_parser_8h_source.html  _command_line_parser_8hpp_source.html  _command_option_8hpp_source.html  _command_validators_8hpp_source.html  _const_sqrt_8hpp_source.html  _constraint_propagation_solver_8cpp.html  _constraint_propagation_solver_8h.html  _constraint_propagation_solver_8h.js  _constraint_propagation_solver_8h_source.html  _constraint_propagation_solver_8hpp_source.html  _digit_8hpp_source.html  _file_stream_8hpp_source.html  _i_command_option_8hpp_source.html  _i_option_8hpp_source.html  _i_reader_8hpp_source.html  _i_solver_8hpp_source.html  _i_sudoku_reader_8hpp.html  _i_sudoku_reader_8hpp.js  _i_sudoku_reader_8hpp_source.html  _i_sudoku_solver_8hpp.html  _i_sudoku_solver_8hpp.js  _i_sudoku_solver_8hpp_source.html  _i_sudoku_writer_8hpp_source.html  _i_writer_8hpp_source.html  _json_reader_8hpp_source.html  _json_writer_8hpp_source.html  _line_writer_8hpp_source.html  _logger_8hpp_source.html  _option_8hpp_source.html  _pretty_writer_8hpp_source.html  _range_array_8hpp_source.html  _range_view_8hpp_source.html  _sudoku_ascii_reader_8hpp_source.html  (+202 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  files_2.js  (+30 more)
gui/: CMakeLists.txt
gui/viewmodel/: ClearCommand.cpp  ClearCommand.hpp  ICommand.hpp  SolveCommand.cpp  SolveCommand.hpp  SudokuViewModel.cpp  SudokuViewModel.hpp
lib/: CMakeLists.txt
lib/core/: BoardUnits.cpp  BoardUnits.hpp  BoardValidator.cpp  BoardValidator.hpp  CallTime.hpp  ConstSqrt.hpp  ContractViolationHandler.cpp  Digit.hpp  Logger.cpp  Logger.hpp  PluginRegistry.hpp  SudokuBoard.cpp  SudokuBoard.hpp  SudokuTraits.hpp
lib/factorybase/: PluginRegistry.hpp
lib/readers/: AsciiReader.cpp  AsciiReader.hpp  IReader.hpp  JsonReader.cpp  JsonReader.hpp  ReaderFactory.cpp  ReaderFactory.hpp  ReaderList.hpp
lib/solvers/: BackTrackingSolver.cpp  BackTrackingSolver.hpp  ConstraintPropagationSolver.cpp  ConstraintPropagationSolver.hpp  ISolver.hpp  RuleBasedSolver.cpp  RuleBasedSolver.hpp  SolverFactory.cpp  SolverFactory.hpp  SolverList.hpp
lib/writers/: BlockWriter.cpp  BlockWriter.hpp  IWriter.hpp  JsonWriter.cpp  JsonWriter.hpp  LineWriter.cpp  LineWriter.hpp  PrettyWriter.cpp  PrettyWriter.hpp  WriterFactory.cpp  WriterFactory.hpp  WriterList.hpp
src/: AsciiReader.cpp  BackTrackingSolver.cpp  BlockWriter.cpp  CMakeLists.txt  CommandLineParser.cpp  ConstraintPropagationSolver.cpp  FileStream.cpp  JsonReader.cpp  JsonWriter.cpp  LineWriter.cpp  Logger.cpp  PrettyWriter.cpp  SudokuAsciiReader.cpp  SudokuBlockWriter.cpp  SudokuBoard.cpp  SudokuFileReader.cpp  SudokuLineWriter.cpp  SudokuPrettyWriter.cpp  SudokuStaticReader.cpp  main.cpp
tests/acceptance/: CMakeLists.txt  CliRunner.hpp  InputAcceptanceTest.cpp  InputTest.cpp  OptionAcceptanceTest.cpp  OptionTest.cpp  OutputAcceptanceTest.cpp  OutputTest.cpp  SolverAcceptanceTest.cpp  SolverTest.cpp  Tests.cpp
tests/acceptance/cli/: CMakeLists.txt  CliRunner.hpp  InputAcceptanceTest.cpp  OutputAcceptanceTest.cpp  SolverAcceptanceTest.cpp
tests/acceptance/gui/: CMakeLists.txt
tests/unit/: BackTrackingSolverTests.cpp  CMakeLists.txt  CallTimeTests.cpp  CommandLineParserTests.cpp  CommandOptionTests.cpp  CommandValidatorsTests.cpp  ConstraintPropagationSolverTests.cpp  DigitTest.cpp  FileStreamTests.cpp  LoggerTests.cpp  RangeArrayTests.cpp  RangeViewTests.cpp  ReaderTests.cpp  SolverTests.cpp  SquareRootTest.cpp  TraitsTests.cpp  WriterTests.cpp
tests/unit/cli/: CommandValidatorsTests.cpp
tests/unit/core/: BoardUnitsTest.cpp  BoardValidatorTests.cpp  CallTimeTests.cpp  DigitTest.cpp  FileStreamTests.cpp  LoggerTests.cpp  PluginRegistryTests.cpp  RangeArrayTests.cpp  RangeViewTests.cpp  SquareRootTest.cpp  TraitsTests.cpp
tests/unit/factorybase/: PluginRegistryTests.cpp
tests/unit/gui/: SudokuViewModelTests.cpp
tests/unit/readers/: ReaderFactoryTests.cpp  ReaderTests.cpp
tests/unit/solvers/: BackTrackingSolverTests.cpp  RuleBasedSolverTests.cpp  (+4 more)
(+121 files in other folders)
